--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 html{
     height: 100%;
     background: linear-gradient(#010101 , #101010 );
+    background-attachment: fixed;
 }
 body{
     text-align: center;
@@ -12,13 +13,14 @@ a[href]{
     color: cadetblue;
     cursor: grab;
     text-decoration: none;
+    font-size: 150%;
     
 }
 h1{
-    font-size: 70px;
+    font-size: 400%;
 }
 h2{
-    font-size: 50px;
+    font-size: 250%;
 }
 
 #title{
